refactor: replace SuperLU with KLU